# ktask-server/src/main/kotlin/ktask/server/domain/entity/notification/SlackTaskRequest.kt
@@ -2,14 +2,14 @@
  * Copyright (c) 2024-Present Perracodex. Use of this source code is governed by an MIT license.
  */
 
-package ktask.server.domain.entity.notification.slack
+package ktask.server.domain.entity.notification
 
 import kotlinx.serialization.Serializable
 import ktask.base.persistence.serializers.SUUID
 import ktask.base.scheduler.service.schedule.Schedule
 import ktask.server.domain.entity.ITaskRequest
 import ktask.server.domain.entity.Recipient
-import ktask.server.domain.service.consumer.AbsTaskConsumer
+import ktask.server.domain.service.consumer.notification.SlackTaskConsumer
 
 /**
  * Represents a request to send a Slack notification task.
@@ -17,14 +17,20 @@ import ktask.server.domain.service.consumer.AbsTaskConsumer
  * @property id The unique identifier of the task request.
  * @property schedule Optional [Schedule] for the task.
  * @property recipients List of target recipients.
- * @property params The [SlackParams] for the notification.
+ * @property template The template to be used for the notification.
+ * @property fields Optional fields to be included in the template.
+ * @property attachments Optional list of file paths to be attached to the notification.
+ * @property channel The channel to send the notification to.
  */
 @Serializable
 data class SlackTaskRequest(
     override val id: SUUID,
     override val schedule: Schedule? = null,
     override val recipients: List<Recipient>,
-    val params: SlackParams
+    override val template: String,
+    override val fields: Map<String, String>? = null,
+    override val attachments: List<String>? = null,
+    val channel: String,
 ) : ITaskRequest {
     init {
         require(recipients.isNotEmpty()) { "At least one recipient must be specified." }
@@ -32,7 +38,7 @@ data class SlackTaskRequest(
 
     override fun toTaskParameters(recipient: Recipient): MutableMap<String, Any> {
         return super.toTaskParameters(recipient = recipient).also { parameter ->
-            parameter[AbsTaskConsumer.PARAMETERS_KEY] = params.serialize()
+            parameter[SlackTaskConsumer.CHANNEL_KEY] = channel
         }
     }
 }
