# ktask-server/src/main/kotlin/ktask/server/domain/service/consumer/notification/EmailTaskConsumer.kt
@@ -7,7 +7,6 @@ package ktask.server.domain.service.consumer.notification
 import ktask.base.env.Tracer
 import ktask.base.settings.AppSettings
 import ktask.base.settings.config.sections.SchedulerSettings
-import ktask.server.domain.entity.notification.email.EmailParams
 import ktask.server.domain.service.consumer.AbsTaskConsumer
 import org.apache.commons.mail.DefaultAuthenticator
 import org.apache.commons.mail.EmailAttachment
@@ -22,18 +21,15 @@ internal class EmailTaskConsumer : AbsTaskConsumer() {
     override fun consume(payload: TaskPayload) {
         tracer.debug("Processing email task notification. ID: ${payload.taskId}")
 
-        val parameters: EmailParams = EmailParams.deserialize(
-            string = payload.additionalParams[PARAMETERS_KEY] as String
-        )
+        val cc: List<String> = parameterToStringList(parameter = payload.additionalParams[CC_KEY])
+        val subject: String = payload.additionalParams[SUBJECT_KEY] as String
 
         // Build the message.
 
         val email: HtmlEmail = HtmlEmail().apply {
             val message: String = buildMessage(
                 type = TemplateType.EMAIL,
-                recipient = payload.recipient,
-                template = parameters.template,
-                fields = parameters.fields
+                payload = payload
             )
 
             setHtmlMsg(message)
@@ -42,13 +38,13 @@ internal class EmailTaskConsumer : AbsTaskConsumer() {
 
         // Add recipients to be copied on the email notification.
 
-        if (parameters.cc.isNotEmpty()) {
-            email.addCc(*parameters.cc.toTypedArray())
+        if (cc.isNotEmpty()) {
+            email.addCc(*cc.toTypedArray())
         }
 
         // Add attachments to the email.
 
-        parameters.attachments?.forEach { attachmentPath ->
+        payload.attachments.forEach { attachmentPath ->
             val attachment: EmailAttachment = EmailAttachment().apply {
                 path = attachmentPath
                 disposition = EmailAttachment.ATTACHMENT
@@ -66,10 +62,15 @@ internal class EmailTaskConsumer : AbsTaskConsumer() {
         email.isSSLOnConnect = emailSpec.isSSLOnConnect
         email.setFrom(emailSpec.username)
         email.addTo(payload.recipient.target)
-        email.subject = parameters.subject
+        email.subject = subject
 
         // Send the email.
         val result: String = email.send()
         tracer.debug("Email notification sent to ${payload.recipient.target}. Task ID: ${payload.taskId}. Result: $result")
+    }
+
+    companion object {
+        const val CC_KEY: String = "CC"
+        const val SUBJECT_KEY: String = "SUBJECT"
     }
 }
