# ktask-server/src/main/resources/openapi/documentation.yaml
@@ -79,7 +79,57 @@ paths:
               examples:
                 Example#1:
                   value: ""
-  /scheduler/tasks:
+  /scheduler/dashboard:
+    get:
+      description: "The scheduler dashboard route."
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ThymeleafContent"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    template: "scheduler-dashboard"
+                    model: "null"
+                    etag: "null"
+                    contentType: "null"
+                    locale: "null"
+                    fragments: "null"
+  /scheduler/pause:
+    post:
+      description: "Pauses all the scheduler tasks."
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TaskStateChangeEntity"
+  /scheduler/resume:
+    post:
+      description: "Resume all the scheduler tasks."
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TaskStateChangeEntity"
+  /scheduler/state:
+    get:
+      description: "Returns the state of the task scheduler."
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+  /scheduler/task:
     delete:
       description: "Deletes all scheduler tasks."
       responses:
@@ -101,7 +151,7 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/TaskScheduleEntity"
-  /scheduler/tasks/{name}/{group}:
+  /scheduler/task/{name}/{group}:
     delete:
       description: "Deletes a concrete scheduler task."
       parameters:
@@ -123,7 +173,7 @@ paths:
               schema:
                 type: "integer"
                 format: "int32"
-  /scheduler/tasks/{name}/{group}/pause:
+  /scheduler/task/{name}/{group}/pause:
     post:
       description: "Pause a concrete scheduler task."
       parameters:
@@ -144,7 +194,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TaskStateChangeEntity"
-  /scheduler/tasks/{name}/{group}/resume:
+  /scheduler/task/{name}/{group}/resume:
     post:
       description: "Resume a concrete scheduled task."
       parameters:
@@ -165,27 +215,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TaskStateChangeEntity"
-  /scheduler/tasks/dashboard:
-    get:
-      description: "The scheduler dashboard route."
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/ThymeleafContent"
-              examples:
-                Example#1:
-                  description: ""
-                  value:
-                    template: "scheduler-dashboard"
-                    model: "null"
-                    etag: "null"
-                    contentType: "null"
-                    locale: "null"
-                    fragments: "null"
-  /scheduler/tasks/groups:
+  /scheduler/task/group:
     get:
       description: "Gets all scheduler task groups."
       responses:
@@ -197,26 +227,6 @@ paths:
                 type: "array"
                 items:
                   type: "string"
-  /scheduler/tasks/pause:
-    post:
-      description: "Pauses all the scheduler tasks."
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/TaskStateChangeEntity"
-  /scheduler/tasks/resume:
-    post:
-      description: "Resume all the scheduler tasks."
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/TaskStateChangeEntity"
   /snowflake/{id}:
     get:
       description: "Snowflake parser to read back the components of a snowflake ID."
@@ -460,9 +470,12 @@ components:
           format: "int32"
         email:
           $ref: "#/components/schemas/EmailSpec"
+        templatesPath:
+          type: "string"
       required:
         - "errors"
         - "email"
+        - "templatesPath"
     LimitSpec:
       type: "object"
       properties:
@@ -572,33 +585,12 @@ components:
           type: "string"
         name:
           type: "string"
-        language:
+        locale:
           type: "string"
       required:
         - "target"
         - "name"
-        - "language"
-    EmailParams:
-      type: "object"
-      properties:
-        template:
-          type: "string"
-        cc:
-          type: "array"
-          items:
-            type: "string"
-        subject:
-          type: "string"
-        attachments:
-          type: "array"
-          items:
-            type: "string"
-        fields:
-          type: "string"
-      required:
-        - "template"
-        - "cc"
-        - "subject"
+        - "locale"
     EmailTaskRequest:
       type: "object"
       properties:
@@ -611,28 +603,26 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/Recipient"
-        params:
-          $ref: "#/components/schemas/EmailParams"
-      required:
-        - "id"
-        - "recipients"
-        - "params"
-    SlackParams:
-      type: "object"
-      properties:
         template:
           type: "string"
-        channel:
+        fields:
           type: "string"
         attachments:
           type: "array"
           items:
             type: "string"
-        fields:
+        cc:
+          type: "array"
+          items:
+            type: "string"
+        subject:
           type: "string"
       required:
+        - "id"
+        - "recipients"
         - "template"
-        - "channel"
+        - "cc"
+        - "subject"
     SlackTaskRequest:
       type: "object"
       properties:
@@ -645,52 +635,21 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/Recipient"
-        params:
-          $ref: "#/components/schemas/SlackParams"
-      required:
-        - "id"
-        - "recipients"
-        - "params"
-    TaskScheduleEntity:
-      type: "object"
-      properties:
-        name:
+        template:
           type: "string"
-        group:
+        fields:
           type: "string"
-        consumer:
-          type: "string"
-        nextFireTime:
-          $ref: "#/components/schemas/LocalDateTime"
-        state:
-          type: "string"
-        interval:
-          type: "string"
-        runs:
-          type: "integer"
-          format: "int32"
-        dataMap:
+        attachments:
           type: "array"
           items:
             type: "string"
+        channel:
+          type: "string"
       required:
-        - "name"
-        - "group"
-        - "consumer"
-        - "state"
-        - "dataMap"
-    TaskStateChangeEntity:
-      type: "object"
-      properties:
-        totalAffected:
-          type: "integer"
-          format: "int32"
-        alreadyInState:
-          type: "integer"
-          format: "int32"
-        totalTasks:
-          type: "integer"
-          format: "int32"
+        - "id"
+        - "recipients"
+        - "template"
+        - "channel"
     HeaderValueParam:
       type: "object"
       properties:
@@ -744,3 +703,43 @@ components:
         - "contentType"
         - "locale"
         - "fragments"
+    TaskStateChangeEntity:
+      type: "object"
+      properties:
+        totalAffected:
+          type: "integer"
+          format: "int32"
+        alreadyInState:
+          type: "integer"
+          format: "int32"
+        totalTasks:
+          type: "integer"
+          format: "int32"
+    TaskScheduleEntity:
+      type: "object"
+      properties:
+        name:
+          type: "string"
+        group:
+          type: "string"
+        consumer:
+          type: "string"
+        nextFireTime:
+          $ref: "#/components/schemas/LocalDateTime"
+        state:
+          type: "string"
+        interval:
+          type: "string"
+        runs:
+          type: "integer"
+          format: "int32"
+        dataMap:
+          type: "array"
+          items:
+            type: "string"
+      required:
+        - "name"
+        - "group"
+        - "consumer"
+        - "state"
+        - "dataMap"
